<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/custom_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wxb.mvp.view.ClearEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/bg_login_et"
        android:drawableStart="@mipmap/login_account"
        android:drawableLeft="@mipmap/login_account"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/hint_account"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12"
        android:text="13651269612"
        android:textColor="@color/gray_4"
        android:textColorHint="@color/gray_9"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.wxb.mvp.view.ClearEditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/bg_login_et"
        android:drawableStart="@mipmap/login_pwd"
        android:drawableLeft="@mipmap/login_pwd"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12"
        android:text="123456"
        android:textColor="@color/gray_4"
        android:textColorHint="@color/gray_9"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/selector_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />
</android.support.constraint.ConstraintLayout>
